Change GitHub button text color to white
Updated the GitHub link button style to change text color to white.

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -31,8 +31,7 @@
                 <a href="#about">About</a>
                 <a href="#privacy">Privacy</a>
                 <a href="#contact">Contact</a>
-                <a href="https://github.com/Bosco98/PromptInject" class="btn-primary nav-btn"
-                    target="_blank">Github</a>
+                <a href="https://github.com/Bosco98/PromptInject" class="btn-primary nav-btn" target="_blank" style="color: white;" >Github</a>
             </div>
         </div>
     </nav>
