Update Chrome Web Store link in index.html

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -43,7 +43,7 @@
              <p>Save, manage, and optimize your prompts instantly on <strong> ChatGPT, Gemini, Perplexity </strong>(or any website). Stop switching tabs and start creating.
             </p>
             <div class="cta-group">
-                <a href="https://chrome.google.com/webstore/detail/your-id-here" class="btn-primary btn-lg"
+                <a href="https://chromewebstore.google.com/detail/promptinject/afehnmnpedbfohjjddfkbjjocahmpkkm" class="btn-primary btn-lg"
                     target="_blank">Add to Chrome - It's Free</a>
                 <a href="#features" class="btn-secondary btn-lg">Learn More</a>
             </div>
